--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-pgdata
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+pgdata
+.idea
